--- a/app/views/helpers/_build_table_text_description.html.erb
+++ b/app/views/helpers/_build_table_text_description.html.erb
@@ -50,10 +50,13 @@
 
 %>
 
-<% if !edit_description_path.blank? && !edit_right.blank? && edit_right %>
-    <div class="table_text_description_edit_button">
-      <a href="#" onclick="load_page(<%= edit_description_path.to_json %>); return false;" class="btn primary">Editovat popisek</a>
-    </div>
+<% if settings[:display_method].blank? %>
+    <% if !edit_description_path.blank? && !edit_right.blank? && edit_right %>
+        <div class="table_text_description_edit_button">
+          <a href="#" onclick="load_page(<%= edit_description_path.to_json %>); return false;" class="btn primary">Editovat
+            popisek</a>
+        </div>
+    <% end %>
 <% end %>
 
 <% unless text.blank? %>
