--- a/app/views/helpers/_build_table.html.erb
+++ b/app/views/helpers/_build_table.html.erb
@@ -1,5 +1,6 @@
+<div class="page">
 <%= render :partial => "/helpers/build_table_text_description", :locals => {:settings => settings} %>
-
+</div>
 <div class="tabs">
   <%= yield :table_form_tabs %>
 
